syntax = "proto3";

package users;


enum Role {
  ADMIN = 0;
  CUSTOMER = 1;
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password_hash = 4;
  string first_name = 5;
  string last_name = 6;
  string address = 7;
  string phone_number = 8;
  Role role = 9;
}

message GetUserRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string username = 2;
  string email = 3;
  string password_hash = 4;
  string first_name = 5;
  string last_name = 6;
  string address = 7;
  string phone_number = 8;
  Role role = 9;
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password_hash = 4;
  string first_name = 5;
  string last_name = 6;
  string address = 7;
  string phone_number = 8;
}

message DeleteUserRequest {
  int32 id = 1;
}

message ListUsersRequest {
    
}

message ListUsersResponse {
  repeated User users = 1;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (User);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}
